--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
           <i class="fa-solid fa-xmark" onclick="close_menu()"></i>
           <h1>Car<span>Point</span></h1>
 
-          <li><a href="#home" class="active link">HOME</a></li>
-          <li><a href="#cars" class="link">CARS</a></li>
-          <li><a href="#about" class="link">ABOUT</a></li>
-          <li><a href="#parts" class="link">PARTS</a></li>
-          <li><a href="#blogs" class="link">OUR BLOG</a></li>
+          <li>
+            <a href="#home" class="active" onclick="close_menu()">HOME</a>
+          </li>
+          <li><a href="#cars" onclick="close_menu()">CARS</a></li>
+          <li><a href="#about" onclick="close_menu()">ABOUT</a></li>
+          <li><a href="#parts" onclick="close_menu()">PARTS</a></li>
+          <li><a href="#blogs" onclick="close_menu()">OUR BLOG</a></li>
         </ul>
         <i class="fa-solid fa-magnifying-glass i-search"></i>
       </div>
@@ -327,3 +329,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
